@@ -1,3 +1,7 @@
+2011-05-11  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* ld-mips-elf/mips-elf.exp: Add missing $has_newabi tests.
+
 2011-05-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-elf/elf.exp (array_tests): Remove "pr12730".
